Fixed docker-compose yaml from PWD to .

--- a/handlers/www/default/landing.html
+++ b/handlers/www/default/landing.html
@@ -35,9 +35,9 @@
       </div>
 
       <div class="jumbotron" ng-cloak> 
-        <img src="https://www.docker.com/sites/default/files/Whale%20Logo332_5.png" />
-        <h1 class="display-3">Play with Docker</h1>
-        <p class="lead">A simple, interactive and fun playground to learn Docker</p>
+        <img src="/assets/pony1k.png" />
+        <h1 class="display-3">Play with Linux</h1>
+        <p class="lead">Welcome to PonyLinux</p>
         <div ng-hide="loggedIn" class="btn-group" role="group">
           <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Login
@@ -56,13 +56,12 @@
 
       <div class="row marketing">
         <div class="col-lg-12">
+	  <p> This project is built off of the work of Play with Docker! Check them out:</p>
             <p>Play with Docker (PWD) is a project hacked by <a href="https://www.twitter.com/marcosnils">Marcos Liljedhal</a> and <a href="https://www.twitter.com/xetorthio">Jonathan Leibiusky</a> and sponsored by Docker Inc.</p>
-            <p>PWD is a Docker playground which allows users to run Docker commands in a matter of seconds. It gives the experience of having a free Alpine Linux Virtual Machine in browser, where you can build and run Docker containers and even create clusters in <a href="https://docs.docker.com/engine/swarm/">Docker Swarm Mode</a>. Under the hood Docker-in-Docker (DinD) is used to give the effect of multiple VMs/PCs. In addition to the playground, PWD also includes a training site composed of a large set of Docker labs and quizzes from beginner to advanced level available at <a href="http://training.play-with-docker.com/">training.play-with-docker.com</a>.</p>
         </div>
       </div>
 
       <footer class="footer">
-        <p>Your use of Play With Docker is subject to the Docker Terms of Service which can be accessed  <a target="_blank" href="https://www.docker.com/legal/docker-terms-service">here</a></p>
         <p>&copy; Play with Docker 2017 - 2021</p>
       </footer>
 
